@@ -24,6 +24,7 @@ import cc.hyperium.netty.NettyClient;
 import cc.hyperium.netty.packet.packets.serverbound.ServerCrossDataPacket;
 import cc.hyperium.purchases.HyperiumPurchase;
 import cc.hyperium.purchases.PurchaseApi;
+import cc.hyperium.utils.HyperiumDesktop;
 import cc.hyperium.utils.JsonHolder;
 import cc.hyperium.utils.RenderUtils;
 import cc.hyperium.utils.UUIDUtil;
@@ -34,7 +35,6 @@ import net.minecraft.client.gui.GuiYesNoCallback;
 import net.minecraft.client.gui.ScaledResolution;
 import net.minecraft.client.renderer.GlStateManager;
 import net.minecraft.client.renderer.texture.DynamicTexture;
-import net.minecraft.client.resources.I18n;
 
 import javax.imageio.ImageIO;
 import java.awt.*;
@@ -43,7 +43,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -53,12 +52,12 @@ import java.util.concurrent.ConcurrentHashMap;
 public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
 
     private int purchaseIds;
-    private Map<String, DynamicTexture> textures = new ConcurrentHashMap<>();
-    private Map<String, BufferedImage> texturesImage = new ConcurrentHashMap<>();
+    private final Map<String, DynamicTexture> textures = new ConcurrentHashMap<>();
+    private final Map<String, BufferedImage> texturesImage = new ConcurrentHashMap<>();
     private JsonHolder cosmeticCallback = new JsonHolder();
     private boolean purchasing;
-    private HashMap<Integer, Runnable> ids = new HashMap<>();
-    private HashMap<String, Integer> intMap = new HashMap<>();
+    private final HashMap<Integer, Runnable> ids = new HashMap<>();
+    private final HashMap<String, Integer> intMap = new HashMap<>();
 
     public CapesGui() {
         guiScale = 2;
@@ -134,17 +133,10 @@ public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
         });
 
         reg("CUSTOM", new GuiButton(nextId(), 1, 22, "Custom Cape"), guiButton -> {
-            Desktop desktop = Desktop.isDesktopSupported() ? Desktop.getDesktop() : null;
-            if (desktop != null) {
-                try {
-                    URI uri = new URL("https://capes.hyperium.cc").toURI();
-                    if(desktop.isSupported(Desktop.Action.BROWSE))
-                        desktop.browse(uri);
-                    else
-                        GeneralChatHandler.instance().sendMessage(I18n.format("message.browseerror", uri));
-                } catch (Exception e) {
-                    Hyperium.LOGGER.error("Could not open link", e);
-                }
+            try {
+                HyperiumDesktop.INSTANCE.browse(new URI("https://capes.hyperium.cc"));
+            } catch (Exception e) {
+                Hyperium.LOGGER.error("Could not open link", e);
             }
         }, guiButton -> {
         });
@@ -153,12 +145,15 @@ public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
     //22x17
     @Override
     public void drawScreen(int mouseX, int mouseY, float partialTicks) {
+        drawDefaultBackground();
         try {
             if (!texturesImage.isEmpty()) {
-                texturesImage.forEach((s, value) -> {
+                for (Map.Entry<String, BufferedImage> entry : texturesImage.entrySet()) {
+                    String s = entry.getKey();
+                    BufferedImage value = entry.getValue();
                     if (!textures.containsKey(s))
                         textures.put(s, new DynamicTexture(value));
-                });
+                }
             }
 
             super.drawScreen(mouseX, mouseY, partialTicks);
@@ -205,17 +200,14 @@ public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
             int i3 = printY + 40;
 
             fontRendererObj.drawString(text, i2 / 2F, i3 / 2F, new Color(97, 132, 249).getRGB(), true);
-            GuiBlock block1 = new GuiBlock(i2, i2 + stringWidth1 * 2, i3, i3 + 15);
+            GuiBlock block1 = new GuiBlock(i2, i2 + (stringWidth1 << 1), i3, i3 + 15);
             GlStateManager.scale(.5F, .5F, .5F);
 
             actions.put(block1, () -> {
-                Desktop desktop = Desktop.getDesktop();
-                if (desktop != null) {
-                    try {
-                        desktop.browse(new URL("https://purchase.sk1er.club/category/1125808").toURI());
-                    } catch (IOException | URISyntaxException e) {
-                        e.printStackTrace();
-                    }
+                try {
+                    HyperiumDesktop.INSTANCE.browse(new URI("https://purchase.sk1er.club/category/1125808"));
+                } catch (Exception e) {
+                    e.printStackTrace();
                 }
             });
 
@@ -250,7 +242,7 @@ public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
 
                     GlStateManager.translate(topLeftX, topLeftY, 0);
                     GlStateManager.scale(capeScale, capeScale, capeScale);
-                    drawTexturedModalRect(0, 0, imgW / 12, 0, imgW, imgH * 2);
+                    drawTexturedModalRect(0, 0, imgW / 12, 0, imgW, imgH << 1);
                     GlStateManager.scale(1F / capeScale, 1F / capeScale, 1F / capeScale);
                     GlStateManager.translate(-topLeftX, -topLeftY, 0);
                 }
@@ -289,7 +281,7 @@ public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
                         int i = thisBlocksCenter - stringWidth;
                         int i1 = thisTopY - 8 + blockHeight / 2 + 64 + 48;
                         string = "Make Active";
-                        GuiBlock block = new GuiBlock(i, i + stringWidth * 2, i1, i1 + 20);
+                        GuiBlock block = new GuiBlock(i, i + (stringWidth << 1), i1, i1 + 20);
 
                         actions.put(block, () -> {
                             JsonHolder purchaseSettings = PurchaseApi.getInstance().getSelf().getPurchaseSettings();
